pruebas/mutacion/policy/cambiar-image-pull-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-image-pull-policy
spec:
  rules:
    - name: set-image-pull-policy
      match:
        any:
        - resources:
            kinds:
            - Pod
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              # Busca Pods que utilicen la imagen con versión "latest"
              - (image): "*:latest"
                # Cambia el parámetro "imagePullPolicy" con el valor "IfNotPresent"
                imagePullPolicy: "IfNotPresent"
